Move login process to the listener thread
Moves the login flow to the listener thread, and also makes the listener
thread run a smol async event loop.

This feels like a better alternative than the "nanny" conditional in the
event loops of Diku/Merc, since there is no test each heartbeat for
whether or not a user has a character attached, and therefore whether to
treat them as in the login flow or not.

Also, an async function is much more easier to write a step-by-step
login flow, than trying to use an enum of possible login states. In
particular, it's always annoying that the next step's prompt is written
to the user's stream in the previous step's code branch.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#generational-arena = "0.2.8"
+generational-arena = "0.2.8"
 telnet = "0.1"
 crossbeam-channel = "0.4"
 log = "0.4"
 femme = "2.1"
+smol = "1.1.0"
