--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ crossbeam-channel = "0.4"
 log = "0.4"
 femme = "2.1"
 smol = "1.1.0"
+bcrypt = "0.8"
+
+[dependencies.getrandom]
+features = ["std"] # Prevents a build error on windows. When bcrypt requires getrandom 0.2, this won't be necessary.
