Support loading players from disk
Loads a JSON file for the player name and, if found, attempts to
deserialize the character from JSON. If not found, fall back to new
character creation.

TODO:
* Consider TOML instead, for the simple reason that it contains line
breaks, which will be easier for an editor to view when it's 10,000
characters long
* Add automatic gzipping of pfiles; this may make the desire for TOML
redundant, because we'd never be viewing them in an editor anymore.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "fennel"
 version = "0.1.0"
 authors = ["Jess Bees <hi@toomanybees.com>"]
 edition = "2018"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -14,6 +15,8 @@ log = "0.4"
 femme = "2.1"
 smol = "1.1.0"
 bcrypt = "0.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dependencies.getrandom]
 features = ["std"] # Prevents a build error on windows. When bcrypt requires getrandom 0.2, this won't be necessary.
