--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ smol = "1.1.0"
 bcrypt = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+toml = "0.5.6"
 
 [dependencies.getrandom]
 features = ["std"] # Prevents a build error on windows. When bcrypt requires getrandom 0.2, this won't be necessary.
