--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ bcrypt = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 toml = "0.5.6"
+fnv = "1.0.3"
 
 [dependencies.getrandom]
 features = ["std"] # Prevents a build error on windows. When bcrypt requires getrandom 0.2, this won't be necessary.
