Load NPCs and spawn them in rooms
Using the shared `Character` struct, we can deserialize NPCs from area
files, and load them into an NPCs hash map. Then, load instances of them
in the rooms they start in.

TODO: the `in-room` field is only useful for players. NPCs will want a
separate reset mechanism, maybe like Diku does it, so that multiple
copies can be loaded at once (if we want to do that)

TODO: putting NPCs in the Characters arena is not gonna work ultimately.
When an NPC dies or whatever, we won't have an Index for it saved
anywhere (like we do for player characters) in order to remove it from
the arena. *grump*

TODO: just to get it up and running, we're iterating through every
character and filtering by "in-room" field to decide who the player
can interact with. We'll *definitely* need a Vec of references or an
intrusive list per room going forward.

--- a/areas/default.toml
+++ b/areas/default.toml
@@ -1,6 +1,19 @@
 name = "Default"
 author = "Bees"
 
+[[npcs]]
+id = 1
+name = "rhane"
+formal-name = "Rhane, knight of the Willow Kingdom"
+room-description = "A tired faerie slumps against the hilt of her greatsword."
+description = '''
+She doesn't bother to make eye contact as she asks you,
+"Why did you come to this forsaken place?"
+Do you have an answer for her?
+'''
+pronoun = "She"
+in-room = 2 # TODO: I think we'll want a reset mechanism instead of going by this field (which is for player chars)
+
 [[rooms]]
 id = 1
 name = "The first room"
