Add multiple keywords for NPCs
This changes the Character's name field (String) for a keywords field
(Vec<String>). For players, this will remain a single element unless
changed manually in pfiles (which you shouldn't do).

In places where we wanted to get the Character's (Player's) name, we
defer to the Player name field, which previously was just a duplicate of
the Character name field. Now, the Character keyword field is explicitly
for the purpose of interacting with a character.

--- a/areas/default.toml
+++ b/areas/default.toml
@@ -3,7 +3,7 @@ author = "Bees"
 
 [[npcs]]
 id = 1
-name = "rhane"
+keywords = ["rhane", "knight", "tired", "faerie"]
 formal-name = "Rhane, knight of the Willow Kingdom"
 room-description = "A tired faerie slumps against the hilt of her greatsword."
 description = '''
