--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ bcrypt = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 toml = "0.5.6"
-fnv = "1.0.3"
+ahash = "0.5.1"
 intrusive-collections = "0.9.0"
 
 [dependencies.getrandom]
